# massiv-example

./: AOC2020.cabal  Example.cabal  README.md  benchmarks.md
app/: Main.hs
core/8.10.2/: Example.dump-simpl
core/8.8.4/: Example.dump-simpl
src/: Example.hs
