cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               Day3
synopsis:           Massiv Example
version:            0.1.0


executable massiv-example
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-T
    -Wall
    -Wincomplete-patterns
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs:
    app/

  build-depends:
      base
    , Example

Library Example

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns
    -fllvm


  hs-source-dirs:
    src/

  build-depends:
      base
    , bytestring
    , text
    , vector
    , primitive
    , deepseq
    , vector-th-unbox
    , vector-builder
    , text-builder
    , massiv


  exposed-modules:
      Example


  default-language:
    Haskell2010


benchmark bench

  default-language:
    Haskell2010

  main-is:
    Bench.hs

  type:
    exitcode-stdio-1.0  
    
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    bench
  
  build-depends:
    , base
    , criterion
    , Example

  other-modules: